# Coop-Evidential-Occupancy-Grid

./: CR.tex  CR.xlsx  README.md  gol_gog_viz.rviz  out.file  profile.txt  run_one_config_file.sh  run_standalone.sh  run_standalone1car.sh  world2cam_draft.m
drafts and notes/: points_cam2world  points_cam2world.m
src/perceptive_stream/: CMakeLists.txt  package.xml
src/perceptive_stream/launch/: bbox_gol_test.launch  gol_gog.launch  merge.launch  merge_debug.launch  merger_alone.launch  simple_stream.launch
src/perceptive_stream/msg/: BBox2D.msg  BBox3D.msg  Img.msg
src/perceptive_stream/scripts/: BBox2D_publisher.py  GOL_merger.py  GOL_publisher.py  bbox2d_to_gol.py  bbox_manager.py  bbox_on_img.py  gndTruthCAR.py  queue_manager.py  readCamStream.py  utils.py  utilsant.py
src/perceptive_stream/scripts/utils/: DST.py  bbox_manager.py  plucker.py  projector.py  queue_manager.py  utilsant.py  vecMatUtils.py
src/perceptive_stream/src/: GOL_Publisher.cpp  GOL_proj.h  cameraPublisher.cpp
standalone_project/: gndTruth.py
standalone_project/agent/: Tmat.py  agent.py  bbox.py  plucker.py  projector.py  vector.py
standalone_project/full_project/: EGG.py  README.md  Tmat.py  agent.py  agents2maps.py  bbox.py  merger.py  metrics.py  metrics_out.py  pipeline.py  plucker.py  projector.py  rasterizer.py  testbench.py  vector.py
standalone_project/main_project/: BoundingBoxExtractor.py  main.py  utils.py
standalone_project/metrics_calculators/: IoU.py  metricsPlot.py
standalone_project/side_generator/: gndTruth.py
standalone_project/test_gui/: test_guimtplt.py
(+52 files in other folders)
